# annuity-price-elasticity-v3

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  ARCHIVE_1_README.md  ARCHIVE_2_README.md  ARCHIVE_3_README.md  BASELINE_CHECKPOINT.md  CHANGELOG.md  CHANGELOG_REFACTORING.md  CLAUDE.md  CLEANUP_TRACKING.md  CONTRIBUTING.md  CURRENT_WORK.md  EXTRACTION_INSTRUCTIONS.md  GEMINI_AUDIT_REPORT.md  Makefile  QUICK_START.md  README.md  README_REFACTORING.md  REINTEGRATION_GUIDE.md  ROADMAP.md  SPLIT_MANIFEST_1.json  SPLIT_MANIFEST_2.json  SPLIT_MANIFEST_3.json  VALIDATION_GUIDE.md  codex_repo_audit.md  codex_repo_audit_2026-01-30.md  codex_test_docs_quality_review.md  create_refactoring_package.py  environment.yml  fix_eda_notebooks.py  manifest.json  notebook_comparison_report.txt  prepare_reintegration.py  pyproject.toml  requirements-aws.txt  requirements.txt  test_fixture_loading.py  validate_equivalence.py  validate_package.py  (+1 more)
.claude/: HUB_RELATIONSHIP.md
.tracking/: coverage_progress.md  decisions.md
docs/: INDEX.md  README.md  conf.py  index.rst  requirements.txt
docs/analysis/: BASELINE_MODEL.md  CAUSAL_FRAMEWORK.md  FEATURE_INTERPRETATION.md  FEATURE_RATIONALE.md  INDEX.md  MODEL_INTERPRETATION.md
docs/api/: API_REFERENCE.md  modules.rst
docs/architecture/: FEATURE_SELECTION_DESIGN.md  MULTI_PRODUCT_DESIGN.md  PRODUCT_EXTENSION_GUIDE.md
docs/business/: executive_summary.md  methodology_report.md  rai_governance.md
docs/development/: CLAUDE.md  CODING_STANDARDS.md  MODULE_HIERARCHY.md  NOTEBOOK_IMPORT_FIX.md  NOTEBOOK_SYS_PATH_FIX.md  QUICK_REFERENCE.md  TECHNICAL_DEBT.md  TESTING_GUIDE.md  TESTING_STRATEGY.md  TEST_ARCHITECTURE.md  TEST_COVERAGE_REPORT.md  WEEK5_PROGRESS.md  WEEK6_COMPLETION_SUMMARY.md
docs/domain-knowledge/: COMPETITIVE_ANALYSIS.md  CREDITING_METHODS.md  FIA_ECONOMICS.md  FIA_FEATURE_MAPPING.md  FIXED_DEFERRED_ANNUITY_TAXONOMY.md  GLOSSARY.md  INDEX.md  RILA_ECONOMICS.md  RILA_MECHANICS_DEEP.md  TDE_SCHEMA.md  WINK_SCHEMA.md
docs/fundamentals/: ECONOMETRICS_PRIMER.md  PYTHON_BEST_PRACTICES.md  TIME_SERIES_PRIMER.md
docs/governance/: MODEL_CARD.md  SPECIFICATION.md
docs/guides/: COMMON_PITFALLS.md  TROUBLESHOOTING.md
docs/integration/: CROSS_PRODUCT_COMPARISON.md  HUB_PATTERN_REFERENCES.md  INDEX.md  LESSONS_LEARNED.md
docs/methodology/: AI_COLLABORATION.md  AI_COLLABORATION_METHODOLOGY.md  EQUIVALENCE_WORKFLOW.md  FAILURE_INVESTIGATION.md  INDEX.md  TOLERANCE_REFERENCE.md  VALIDATOR_SELECTION.md  feature_engineering_guide.md  validation_guidelines.md
docs/migration/: V2_INTERFACE_WIRING.md  vestigial_code_audit.md
docs/onboarding/: AWS_SETUP_GUIDE.md  COMMON_TASKS.md  DATA_PIPELINE.md  DECISION_LOG.md  FIRST_MODEL_GUIDE.md  FOR_NEW_DEVELOPERS.md  FOR_NEW_DEVELOPERS_COMPREHENSIVE.md  FOR_STAKEHOLDERS.md  GETTING_STARTED.md  MENTAL_MODEL.md  NOTEBOOK_QUICKSTART.md  OFFLINE_DEVELOPMENT.md  TROUBLESHOOTING.md  USER_JOURNEYS.md  USING_CLAUDE_CODE.md  day_one_checklist.md
docs/operations/: DATA_QUALITY_MONITORING.md  DEPLOYMENT_CHECKLIST.md  EMERGENCY_PROCEDURES.md  MONITORING_GUIDE.md  PERFORMANCE_TUNING.md
docs/practices/: ANTI_PATTERNS.md  COMMIT_TYPES.md  DECISIONS.md  INDEX.md  LEAKAGE_AUDIT_TRAIL.md  LEAKAGE_CHECKLIST.md  NOTEBOOK_CI_STATUS.md  burst.md  data_leakage_prevention.md  git.md  sessions.md  testing.md
docs/reference/: CONFIGURATION_REFERENCE.md
docs/research/: TD05_OLS_vs_Ridge.md  leakage_audit_TEMPLATE.md
docs/test_quality/: DOCUMENTATION_AUDIT.md  SUMMARY.md  test_inventory.json
docs/validation/: VALIDATION_EVIDENCE.md
knowledge/: README.md  analysis  domain  integration  methodology  practices
notebooks/onboarding/: architecture_walkthrough.ipynb
notebooks/shared/: __init__.py  exports.py  notebook_common.py  validation.py
scripts/: capture_baselines.py  capture_notebook_baselines.py  column_lineage.py  domain_search.py  emergency-rollback.sh  equivalence_guard.py  generate_status.py  hardcode_scanner.py  optimize_fixtures.py  pattern_validator.py  setup_notebook_fixtures.py  stub_allowlist.json  stub_hunter.py  validate_type_imports.sh  wiring_verification_prompts.md
sessions/: README.md  SESSION_001_code_quality_improvements_2026-01-24.md
sessions/archive/: SESSION_001_comprehensive_audit_2026-01-30.md
src/config/: __init__.py  config_builder.py  configuration_validator.py  constants.py  forecasting_builders.py  forecasting_config.py  inference_builders.py  mlflow_config.py  pipeline_builders.py  pipeline_config.py  product_config.py  visualization_builders.py
src/core/: __init__.py  exceptions.py  product_registry.py  protocols.py  registry.py  types.py
src/data/: __init__.py  dvc_manager.py  extraction.py  forecasting_atomic_ops.py  output_manager.py  pipelines.py  preprocessing.py  quality_monitor.py  rila_business_rules.py  schema_validator.py  transformation_lineage.py
src/features/: __init__.py  competitive_features.py  competitor_sign_utils.py  engineering.py  engineering_integration.py  engineering_temporal.py  engineering_timeseries.py  selection_types.py
src/models/: __init__.py  forecasting_atomic_models.py  forecasting_atomic_results.py  forecasting_atomic_validation.py  forecasting_orchestrator.py  forecasting_types.py  inference.py  inference_scenarios.py  inference_training.py  inference_validation.py
src/notebooks/: __init__.py  interface.py
src/products/: __init__.py  base.py  fia_methodology.py  myga_methodology.py  rila_methodology.py
src/utils/: geometry.py
src/validation/: __init__.py  coefficient_patterns.py  config_schemas.py  data_schemas.py  input_validators.py  leakage_gates.py  ml_engineer_docs.py  pipeline_validation_helpers.py  production_validators.py  schema_evolution.py
src/validation_support/: __init__.py  aws_mock_layer.py  mathematical_equivalence.py  validation_constants.py  validation_dataframe.py  validation_feature_selection.py
src/visualization/: __init__.py  business_communication.py  comparison_bootstrap_plots.py  comparison_coefficient_analysis.py  comparison_helpers.py  dashboard_integration.py  (+7 more)
tests/: conftest.py
(+435 files in other folders)
