[project]
name = "annuity-price-elasticity"
version = "3.0.0"
description = "Multi-product annuity price elasticity analysis system (RILA, FIA, MYGA)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Brandon Behring"}
]
keywords = ["annuity", "price-elasticity", "econometrics", "insurance", "causal-inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",

    # Machine Learning & Statistics
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # Configuration
    "pyyaml>=6.0.1",

    # Utilities
    "tqdm>=4.66.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34.0",
    "awscli>=1.32.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "nbconvert>=7.14.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "hypothesis>=6.100.0",
]
all = [
    "annuity-price-elasticity[aws,jupyter,dev]",
]

[project.urls]
Repository = "https://github.com/brandon-behring/annuity-price-elasticity"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "quick: marks quick tests (<30s execution)",
    "aws: marks tests requiring AWS access",
    "unit: marks unit tests",
    "integration: marks integration tests",
    "baseline: marks baseline validation tests",
    "notebook: marks notebook execution tests",
    "property: marks property-based tests (Hypothesis)",
    "leakage: marks leakage detection tests",
    "performance: marks performance baseline tests (timing)",
    "memory: marks memory baseline tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | notebooks
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in argument defaults
]
exclude = [
    "notebooks/",
    ".venv/",
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "notebooks/",
    "tests/",
]
