[project]
name = "annuity-price-elasticity"
version = "3.0.0"
description = "Multi-product annuity price elasticity analysis system (RILA, FIA, MYGA)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Brandon Behring"}
]
keywords = ["annuity", "price-elasticity", "econometrics", "insurance", "causal-inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",

    # Machine Learning & Statistics
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # Configuration
    "pyyaml>=6.0.1",

    # Utilities
    "tqdm>=4.66.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34.0",
    "awscli>=1.32.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "nbconvert>=7.14.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "nbmake>=1.5.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "hypothesis>=6.100.0",
    "pydocstyle>=6.3.0",
    "interrogate>=1.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "autodoc-pydantic>=2.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
]
all = [
    "annuity-price-elasticity[aws,jupyter,dev,docs]",
]

[project.urls]
Repository = "https://github.com/brandon-behring/annuity-price-elasticity"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "quick: marks quick tests (<30s execution)",
    "aws: marks tests requiring AWS access",
    "unit: marks unit tests",
    "integration: marks integration tests",
    "baseline: marks baseline validation tests",
    "notebook: marks notebook execution tests",
    "property: marks property-based tests (Hypothesis)",
    "leakage: marks leakage detection tests",
    "performance: marks performance baseline tests (timing)",
    "memory: marks memory baseline tests",
    "known_answer: marks known-answer tests validating against literature/golden values",
    "monte_carlo: marks Monte Carlo simulation tests",
    "adversarial: marks adversarial/edge case stress tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | notebooks
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "notebooks/",
    ".venv/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "D",      # pydocstyle
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in argument defaults
    "D100",   # Missing docstring in public module (too noisy during ramp-up)
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    # NumPy style formatting rules (not critical for coverage)
    "D202",   # No blank lines allowed after function docstring
    "D204",   # 1 blank line required after class docstring
    "D406",   # Section name should end with a newline
    "D407",   # Missing dashed underline after section
    "D409",   # Section underline should be in the line following the section's name
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"*/__init__.py" = ["D104"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "notebooks/",
    "tests/",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
fail-under = 85
exclude = ["tests", "notebooks"]
verbose = 1
